fixed blurry text shadow on headers in "shadow" class

--- a/styles/style.index.css
+++ b/styles/style.index.css
@@ -31,7 +31,7 @@ header img{
     float: left;
 }
 .shadow{
-    text-shadow: 2px 2px 2px rgba(128, 0, 0, 1);
+    text-shadow: 2px 2px 0px rgba(128, 0, 0, 1);
 }
 main{
     clear: left;
